--- a/index.html
+++ b/index.html
@@ -4,20 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EmployeeCard</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Profile Page</title>
+    <link rel="stylesheet" href="style.css">    
 </head>
 <body>
-    <div class="wrapper">
-        <div class="topBox"></div>
-        <img id="photo"src="user-circle-50x50.png">
-        <div class="bottomBox">
-            <div class="textLoc">
-                <h2 class="you">Jane Doe</h2>
-                <h3 class="location"><img class="gps" src="map-marker-20x20.png" alt="Sorry">Seatle</h3>
-                <h3 class="aboutMe">Developer | Engineer | Problem Solver </h3>
-                <h3 class="funny">Master of shadows and the internet</h3>
-                <h4 class="settings"><img src="gear-20x20.png" alt="sorry">edit profile </h4>
+    <navbar>
+        <ul class = "navList" >
+            <li>Profile</li>
+            <li>Home</li>
+            <li>My Profile</li>
+            <li>My Connections</li>
+            <li id="secretTrick"></li>
+            <button id="signOut">Sign Out</button>
+        </ul>
+    </navbar>
+<!-- PAST THE NAV BAR -->
+    <div class = "Wrapper"></div>
+        <div class ="Container">
+            <div class = "Left">
+                <h1>burgerking</h1>
+                <div clas = "leftUpper">leftupper</div>
+                <div class = "leftLower">leftlower</div>leftDown</div>
+            </div>
+            <div class = "Right">
+                <h1>mcdonalds</h1>
+                <div class = "rightUpper">rightupper</div>
+                <div clas s= "rightLower">rightlower</div>rightDown</div>
             </div>
         </div>
     </div>
