flex working, outline

--- a/index.html
+++ b/index.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile Page</title>
-    <link rel="stylesheet" href="style.css">    
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body>
     <navbar>
-        <ul class = "navList" >
-            <li>Profile</li>
-            <li>Home</li>
-            <li>My Profile</li>
-            <li>My Connections</li>
-            <li id="secretTrick"></li>
-            <button id="signOut">Sign Out</button>
-        </ul>
+      <ul class="navList">
+        <li>Profile</li>
+        <li>Home</li>
+        <li>My Profile</li>
+        <li>My Connections</li>
+        <li id="secretTrick"></li>
+        <button id="signOut">Sign Out</button>
+      </ul>
     </navbar>
-<!-- PAST THE NAV BAR -->
-    <div class = "Wrapper"></div>
-        <div class ="Container">
-            <div class = "Left">
-                <h1>burgerking</h1>
-                <div clas = "leftUpper">leftupper</div>
-                <div class = "leftLower">leftlower</div>leftDown</div>
-            </div>
-            <div class = "Right">
-                <h1>mcdonalds</h1>
-                <div class = "rightUpper">rightupper</div>
-                <div clas s= "rightLower">rightlower</div>rightDown</div>
-            </div>
+    <!-- PAST THE NAV BAR -->
+    <div class="Wrapper">
+      <div class="Container">
+        <div class="Left">
+          <h1>LeftColumn</h1>
+          <div class="left upper"></div>
+          <div class="leftLower">leftlower</div>
+          -->
         </div>
+        <div class="Right">
+          <h1>RightColumn</h1>
+          <div class="right upper"></div>
+        </div>
+      </div>
     </div>
-    
-</body>
+  </body>
 </html>
