--- a/index.html
+++ b/index.html
@@ -23,14 +23,74 @@
     <div class="Wrapper">
       <div class="Container">
         <div class="Left">
-          <h1>LeftColumn</h1>
-          <div class="left upper"></div>
-          <div class="leftLower">leftlower</div>
-          -->
+          <div class="card">
+            <img id="pic" src="card.png" alt="Sorry" />
+          </div>
+          <div class="lowerLeftConsolidated">
+            <div class="TitleBar">Education</div>
+            <div>Coding Dojo Full Stack Bootcamp</div>
+            <div>
+              <p>
+                <script>
+                  document.write(new Date().toLocaleDateString());
+                </script>
+              </p>
+            </div>
+            <div>Triple Black Belt in Python, C#, and MERN</div>
+          </div>
         </div>
         <div class="Right">
-          <h1>RightColumn</h1>
-          <div class="right upper"></div>
+          <div class="rightTop">
+            <div class="ConnectionRequests">
+              <img src="user-circle-20x20.png" alt="Sorry" />
+              Connection Requests
+            </div>
+            <div class="myRequests">
+              <img src="user-circle-20x20.png" alt="Sorry" />
+              Todd E.
+              <img src="accept-circle-20x20.png" alt="Sorry" />
+              <img src="close-circle-20x20.png" alt="Sorry" />
+            </div>
+            <div class="myRequests">
+              <img src="user-circle-20x20.png" alt="Sorry" />
+              Phill K.
+              <img src="accept-circle-20x20.png" alt="Sorry" />
+              <img src="close-circle-20x20.png" alt="Sorry" />
+            </div>
+          </div>
+          <div class="right">
+            <div class="rightBottom">
+              <div class="TitleBar">
+                <img src="user-circle-20x20.png" alt="" />
+                Your Contacts
+              </div>
+              <div class="Requests">
+                <img src="user-circle-20x20.png" alt="" />
+                Adrian D.
+                <img src="accept-circle-20x20.png" alt="Sorry" />
+                <img src="close-circle-20x20.png" alt="Sorry" />
+              </div>
+              <div class="Requests">
+                <img src="user-circle-20x20.png" alt="" />
+                Amy J.
+                <img src="accept-circle-20x20.png" alt="Sorry" />
+                <img src="close-circle-20x20.png" alt="Sorry" />
+              </div>
+              <div class="Requests">
+                <img src="user-circle-20x20.png" alt="" />
+                Alayne T.
+                <img src="accept-circle-20x20.png" alt="Sorry" />
+                <img src="close-circle-20x20.png" alt="Sorry" />
+              </div>
+              <div class="requests">
+                <img src="user-circle-20x20.png" alt="" />
+                Arry Y.
+                <img src="accept-circle-20x20.png" alt="Sorry" />
+                <img src="close-circle-20x20.png" alt="Sorry" />
+              </div>
+              <div class="viewMore">View More</div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
